tuptime (5.2.2) unstable; urgency=low

  * Swich between longest/shortest on default output with -r

 -- Ricardo Fraile <rfraile@rfraile.eu>  Fri, 19 Aug 2022 16:22:00 +0100

tuptime (5.2.1) unstable; urgency=low

  * Set cron file with systemd execute exclusion on .deb package
  * Return -e option as an argument for --dec decimals
  * Update .deb package
  * Update .rpm package

 -- Ricardo Fraile <rfraile@rfraile.eu>  Fri, 19 Aug 2022 16:21:00 +0100

tuptime (5.2.0) unstable; urgency=low

  * Rename timer units to tuptime-sync.timer and tuptime-sync.service
  * Using StateDirectory= on systemd unit
  * Available tuptime.sysusers file for systemd-sysusers
  * Replace cron file with systemd timer on .deb package
  * Add rc script for OpenBSD and update installation doc
  * Deprecate --pctl option
  * Adding -E, --exclude option
  * Print longest uptime and downtime values on default output
  * Update distribution packages
  * Code refactoring

 -- Ricardo Fraile <rfraile@rfraile.eu>  Tue, 02 Aug 2022 21:55:00 +0100

tuptime (5.1.0) unstable; urgency=low

  * Cover DB writes with transactions
  * Register DB version on PRAGMA user_version
  * Adding --pctl option. Show percentil over average values
  * Code refactoring
  * Update .deb package

 -- Ricardo Fraile <rfraile@rfraile.eu>  Sun, 16 Jan 2022 13:09:00 +0100

tuptime (5.0.2) unstable; urgency=low

  * Option --decp usable but deprecated
  * Using subprocess module on BSDs

 -- Ricardo Fraile <rfraile@rfraile.eu>  Sat, 02 Jan 2021 09:01:00 +0100

tuptime (5.0.1) unstable; urgency=low

  * Identify new startups with boot_id on FreeBSD
  * Option --decp renamed to --dec and -e equal to it.
  * Minnor code refactoring

 -- Ricardo Fraile <rfraile@rfraile.eu>  Sat, 31 Oct 2020 15:06:00 +0100

tuptime (5.0.0) unstable; urgency=low

  * Abbreviate format in time counters
  * Identify new startups with boot_id on Linux
  * Adding -b, --bootid option to show boot IDs