@@ -4,5 +4,5 @@
 
 # Skip in favour of systemd timer
 
-*/5 * * * *   _tuptime    if [ ! -d /run/systemd/system ] && [ -x /usr/bin/tuptime ]; then /usr/bin/tuptime -x > /dev/null; fi
+*/5 * * * *   _tuptime    if [ ! -d /run/systemd/system ] && [ -x /usr/bin/tuptime ]; then /usr/bin/tuptime -w > /dev/null; fi
 
