@@ -6,10 +6,10 @@ STOP=60
 start() {
         echo 'Tuptime start'
         ln -s /opt/tuptime/ /var/lib/tuptime 2> /dev/null
-        /usr/bin/python3 /usr/bin/tuptime -x
+        /usr/bin/python3 /usr/bin/tuptime -w
 }
 
 stop() {
         echo 'Tuptime stop'
-        /usr/bin/python3 /usr/bin/tuptime -xg
+        /usr/bin/python3 /usr/bin/tuptime -wg
 }
