@@ -8,7 +8,7 @@
 	<array>
 		<string>sh</string>
 		<string>-c</string>
-		<string>/usr/bin/tuptime -x</string>
+		<string>/usr/bin/tuptime -w</string>
 	</array>
 	<key>RunAtLoad</key>
 	<true/>
